--- a/chess-game.html
+++ b/chess-game.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chess Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <div id="chessboard"></div>
-    <script src="script.js"></script>
+    <div id="chessboard"></div> <!-- Chessboard div -->
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
