--- a/chess-game.html
+++ b/chess-game.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess Game</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>Chessboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="chessboard"></div> <!-- Chessboard div -->
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <div class="chessboard"></div>
 </body>
 </html>
