--- a/chess-game.html
+++ b/chess-game.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chessboard</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css"> <!-- Corrected link -->
 </head>
 <body>
     <div class="chessboard"></div>
